--- a/Flask/hello-flask/Pipfile
+++ b/Flask/hello-flask/Pipfile
@@ -5,6 +5,11 @@ name = "pypi"
 
 [packages]
 flask = "*"
+flask-sqlalchemy = "*"
+flask-marshmallow = "*"
+marshmallow-sqlalchemy = "*"
+sqlalchemy = "*"
+jsonify = "*"
 
 [dev-packages]
 
